implement clicks logic

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,18 +17,18 @@
             <!--</intent-filter>-->
         </activity>
         <activity android:name=".product_list.ProductActivity">
-          <!-- <intent-filter>
-                <action android:name="android.intent.action.MAIN" />-->
-
-               <!-- <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>-->
-        </activity>
-        <activity android:name=".CountryActivity">
-            <intent-filter>
+           <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
-             </intent-filter>
+            </intent-filter>
+        </activity>
+        <activity android:name=".country.CountryActivity">
+            <!--<intent-filter>-->
+                <!--<action android:name="android.intent.action.MAIN" />-->
+
+                <!--<category android:name="android.intent.category.LAUNCHER" />-->
+             <!--</intent-filter>-->
          </activity>
      </application>
 
